# ltheory

./: .gitmodules  CMakeLists.txt  README.md
docs/: README.md  build-and-maintenance.md  design.md  libphx.md
docs/script/: App.md  Game.md  Gen.md  README.md  UI.md  Util.md  WIP.md  env.md  jit.md  phx.md
res/shader/fragment/: skybox.glsl  starbg.glsl
res/shader/fragment/effect/: dustcloud.glsl  dustfleck.glsl
res/shader/fragment/filter/: tonemap.glsl
res/shader/fragment/light/: composite.glsl  global.glsl  point.glsl
res/shader/fragment/material/: asteroid.glsl  metal.glsl
res/shader/include/: centralstar.glsl  dustlighting.glsl  fragment.glsl  gamma.glsl  nebulapalette.glsl  skybox_compose.glsl  starlighting.glsl
res/shader/vertex/: worldray.glsl
res/shader/vertex/billboard/: wrapped.glsl
script/: Config.App.lua  Config.Local.lua  Config.Local.lua.example  Main.lua
script/App/: AudioTest.lua  FMODTest.lua  FontTest.lua  InputTest.lua  LTheory.lua  NebulaExportTest.lua  PhysicsAttachTest.lua  ProcGenTest.lua
script/Game/: Event.lua  MountSocket.lua  MountType.lua  ShipType.lua
script/Game/Actions/: Attack.lua
script/Game/Components/: Sockets.lua  ThrustController.lua
script/Game/Controls/: DockControl.lua  HUD.lua
script/Game/Entities/: Dust.lua  Nebula.lua  Pulse.lua  System.lua  Thruster.lua  Turret.lua
script/Game/GUI/: GameView.lua
script/env/ext/: GlobalEx.lua
script/phx/util/: Application.lua  ConfigReload.lua
src/: Main.cpp
